# maestro

./: .gitignore  AGENTS.md  CLAUDE.md  build-mac.sh  build-win.bat  build_xlsx.py  e2e-test-prompts.md  restart.bat  restart.sh  工具调用链能力对比.xlsx  未实现清单_ClaudeCode提示词.md
maestro/: .env.example  README.md  generate_ai_agent_ppt.py  maestro_backend.spec  pyproject.toml
maestro/data/mock/: bom.json  lines.json  orders.json
maestro/data/mock/knowledge/: exception-handling.md
maestro/src/maestro/: __init__.py  bootstrap.py  cli.py  config.py  main.py  sidecar_entry.py
maestro/src/maestro/api/: __init__.py  app.py  security.py
maestro/src/maestro/domain/: models.py
maestro/src/maestro/engines/: base.py
maestro/src/maestro/events/: event_bus.py  handlers.py  scheduler.py
maestro/src/maestro/execution/: __init__.py  models.py  output_store.py  risk.py  service.py  srt.py
maestro/src/maestro/extensions/: __init__.py  adapters.py  catalog_tools.py  github.py  localization.py  scheduler.py  schemas.py  service.py  sources.py  store.py
maestro/src/maestro/foundation/: audit.py  authz.py  (+13 more)
maestro/tests/: conftest.py  test_agent_loop_state.py  test_audit_persistence.py  test_chat_attachments.py  test_chat_sse.py  test_chroma_store.py  test_config_data_dir.py  test_events.py  test_extension_catalog.py  test_knowledge.py  test_models_api.py  test_observation_store.py  test_office_artifacts.py  test_permissions.py  test_planning.py  test_query.py  test_router.py  test_runs_api.py  test_runtime_extensions.py  test_scheduling.py  test_sessions.py  test_shell_execution.py  test_sidecar_entry.py  test_skill_capabilities.py  test_skill_routing.py  test_skill_trust_execution.py  test_skills.py  test_tool_chain.py  test_tools_builtins.py
maestro/tests/runtime/: fakes.py  test_approval.py  test_b1_invariants.py  test_cancellation.py  test_capabilities.py  test_context.py  test_fast_loop.py  test_intent.py  test_journal.py  test_models.py  test_path_upgrade.py  test_policy.py  test_reconciliation.py  test_recovery.py  test_skills_compat.py  test_state_machine.py  test_store.py
scheduling_platform/: .env  README.md  pyproject.toml
scheduling_platform/data/mock/: inventory.json  work_orders.json
scheduling_platform/logs/: audit.jsonl
scheduling_platform/src/scheduling_platform/: __init__.py  bootstrap.py  cli.py  config.py  main.py  sidecar_entry.py
scheduling_platform/tests/: conftest.py  test_chroma_store.py  test_config_data_dir.py  test_events.py  test_knowledge.py  test_planning.py  test_query.py  test_router.py  test_scheduling.py  test_sessions.py  test_sidecar_entry.py  test_skill_routing.py  test_skills.py  test_tools_builtins.py
(+371 files in other folders)
