[project]
name = "scheduling-platform"
version = "0.1.0"
description = "生产调度与排产 Agent 平台 — 一个平台 / 两个引擎 / 一个入口"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai>=1.40",
    "ortools>=9.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
# RAG 可选文件格式加载器 (缺库时对应格式不启用，平台仍可离线运行)
rag = [
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.scripts]
splat-cli = "scheduling_platform.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduling_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
